fix layout bugs

--- a/wp-content/themes/think/src/app.scss
+++ b/wp-content/themes/think/src/app.scss
@@ -118,7 +118,7 @@ nav.navbar {
    position: absolute;
    z-index: 4;
    right: 40px;
-   top: 24px;
+   top: 30px;
    background: url('/wp-content/themes/think/images/burger-menu.svg') no-repeat;
    width: 30px;
    height: 30px;
@@ -185,6 +185,14 @@ p.desc {
    position: relative;
    overflow: hidden;
 }
+div.scroll-button.text-center a{
+   color: #FFFFFF;
+   font-family: "NeueMontrealBold";
+   font-size: 16px;
+   letter-spacing: 0.2px;
+   text-align: center;
+   text-decoration: none;
+}
 #banner::after {
    content: url('/wp-content/themes/think/images/homepage/big-wave-right.png');
    position: absolute;
@@ -237,7 +245,7 @@ p.desc {
    text-decoration: none;
 }
 #about .services {
-   margin-top: 120px;
+   margin-top: 96px;
 }
 #recent-projects {
    padding: 120px 0;
@@ -338,8 +346,8 @@ p.desc {
    padding: 0 24px 32px 24px;
 }
 #partners div.flex div{
-   width: 20%;
    height: 175px;
+   width: 223px;
    text-align: center;
    display: flex;
    padding: 60.5px 53.5px;
@@ -491,7 +499,9 @@ footer #bottom-footer ul li a {
 @media (min-width: 1025px) and (max-width: 1280px) {
 
    /* CSS */
-
+   #banner h1, #banner .h1 {
+      padding-top: 0;
+   }
 }
 
 /*
@@ -502,7 +512,14 @@ footer #bottom-footer ul li a {
 @media (min-width: 768px) and (max-width: 1024px) {
 
    /* CSS */
-
+   div.scroll-button.text-center {
+      margin-top: 200px;
+   }
+   #banner::after {
+      right: -103px;
+      bottom: 67px;
+      transform: scale(0.7);
+   }
 }
 
 /*
@@ -522,9 +539,36 @@ footer #bottom-footer ul li a {
 */
 
 @media (min-width: 481px) and (max-width: 767px) {
-
+   .sm-text-center {
+      text-align: center;
+   }
    /* CSS */
-
+   nav.navbar div.right-bar .menu ul {
+      padding: 100px 120px 70px;
+   }
+   h1 {
+      font-size: 48px;
+      line-height: 64px;
+   }
+   h2 {
+      font-size: 36px;
+   }
+   div.scroll-button.text-center {
+      margin-top: 100px;
+   }
+   #banner::after {
+      right: -137px;
+      bottom: 0;
+      transform: scale(0.5);
+   }
+   footer #pre-footer h3 img, footer #pre-footer .h3 img {
+      position: relative;
+      right: 0;
+   }
+   footer #bottom-footer ul {
+      margin-top: 20px;
+      justify-content: center;
+   }
 }
 
 /*
@@ -533,14 +577,50 @@ footer #bottom-footer ul li a {
 */
 
 @media (min-width: 320px) and (max-width: 480px) {
-
+   .xs-text-center {
+      text-align: center;
+   }
    /* CSS */
-
+   nav.navbar div.right-bar .menu ul {
+      padding: 100px 60px 70px;
+   }
+   nav.navbar div.right-bar .menu ul li a{
+   font-size: 28px;
+   letter-spacing: 0.45px;
+   line-height: 38px;
+   }
+   #banner::after {
+      right: -137px;
+      bottom: 0;
+      transform: scale(0.5);
+   }
+   h1 {
+      font-size: 48px;
+      line-height: 64px;
+   }
+   h2 {
+      font-size: 36px;
+   }
+   div.scroll-button.text-center {
+      margin-top: 100px;
+   }
+   h3 {
+      font-size: 26px;
+      line-height: 28px;
+   }
+   footer #pre-footer h3 img, footer #pre-footer .h3 img {
+      position: relative;
+      right: 0;
+   }
+   footer #bottom-footer ul {
+      margin-top: 20px;
+      justify-content: center;
+   }
 }
 
 // For laptop with height less than 800px
 
-@media (max-height: 800px) {
+@media (min-width: 1140px) and (max-height: 800px) {
    nav.navbar div.right-bar .menu ul{
       padding: 60px 215px 40px;
       list-style: none;
